# physics-simulator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.py  imgui.ini  simulator.py
buildtools/: __init__.py  builder.py  runner.py  utils.py
src/: SimulationState.h  main.cpp
src/collision/: collision.cpp  collisions.cpp  collisions.hpp  particle.cpp  particle.hpp
src/engine/: collisions.cpp  collisions.hpp  particle.cpp  particle.hpp  vector.hpp
src/render/: renderer.cpp  renderer.hpp
src/ui/: UIManager.cpp  UIManager.hpp
